Background and model update

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Advance Calculator</title>
 </head>
 <body>
-    
+    <main id = "calc">
+        <div id = "top-content">
+            <div class = "top-box model-text">
+                <p>CASIO</p>
+                <p>fx-991EX</p>
+                <p>CLASSWIZ</p>
+            </div>
+            <div class = "top-box panel"></div>
+            <div class = "top-box screen"></div>
+        </div>
+    </main>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
