white case and zooming in issue fixed

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>Advance Calculator</title>
 </head>
 <body>
-    <main id = "calc">
-        <div id = "top-content">
-            <div class = "top-box model-text">
-                <p>CASIO</p>
-                <p>fx-991EX</p>
-                <p>CLASSWIZ</p>
-            </div>
-            <div class = "top-box panel"></div>
-            <div class = "top-box screen"></div>
+    <div class="empty-space">
+        <div class="wrapper"></div>
+            <main id = "calc">
+                <div id = "top-content">
+                    <div class = "top-box model-text">
+                        <p>CASIO</p>
+                        <p>fx-991EX</p>
+                        <p>CLASSWIZ</p>
+                    </div>
+                    <div class = "top-box panel"></div>
+                    <div class = "top-box screen"></div>
+                </div>
+            </main>
         </div>
-    </main>
+    </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
