--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
 <body>
     <div class="empty-space">
         <div class="wrapper"></div>
-            <main id = "calc">
-                <div id = "top-content">
-                    <div class = "top-box model-text">
-                        <p>CASIO</p>
-                        <p>fx-991EX</p>
-                        <p>CLASSWIZ</p>
-                    </div>
-                    <div class = "top-box panel"></div>
-                    <div class = "top-box screen"></div>
+        <main id = "calc">
+            <div id = "top-content">
+                <div class = "top-box model-text">
+                    <p>CASIO</p>
+                    <p>fx-991EX</p>
+                    <p>CLASSWIZ</p>
                 </div>
-            </main>
-        </div>
+                <div class = "top-box panel"></div>
+                <div class = "top-box screen"></div>
+            </div>
+            <div id = "bot-content">
+                <div class = "top-buttons">
+                    <button class = "steel shift"></button>
+                    <button class = "steel alpha"></button>
+                    <button class = "steel menu"></button>
+                    <button class = "steel on"></button>
+                </div>
+            </div>
+        </main>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
