Bottom half buttons, labels and function texts

--- a/index.html
+++ b/index.html
@@ -20,11 +20,40 @@
                 <div class = "top-box screen"></div>
             </div>
             <div id = "bot-content">
+                <div class = "top-text">
+                    <p class = "T-Btn-Text S">SHIFT</p>
+                    <p class = "T-Btn-Text A">ALPHA</p>
+                    <p class = "T-Btn-Text M">MENU</p>
+                    <p class = "T-Btn-Text SE">SETUP</p>
+                    <p class = "T-Btn-Text O">ON</p>
+                </div>
                 <div class = "top-buttons">
                     <button class = "steel shift"></button>
                     <button class = "steel alpha"></button>
                     <button class = "steel menu"></button>
                     <button class = "steel on"></button>
+                </div>
+                <div class="bot-buttons">
+                    <button class="Btn seven"><span>7</span></button>
+                    <button class="Btn eight"><span>8</span></button>
+                    <button class="Btn nine"><span>9</span></button>
+                    <button class="Btn delete"><span>DEL</span></button>
+                    <button class="Btn AC"><span>AC</span></button>
+                    <button class="Btn four"><span>4</span></button>
+                    <button class="Btn five"><span>5</span></button>
+                    <button class="Btn six"><span>6</span></button>
+                    <button class="Btn multi"><span>X</span></button>
+                    <button class="Btn div"><span></span></button>
+                    <button class="Btn one"><span>1</span></button>
+                    <button class="Btn two"><span>2</span></button>
+                    <button class="Btn three"><span>3</span></button>
+                    <button class="Btn plus"><span></span></button>
+                    <button class="Btn minus"><span></span></button>
+                    <button class="Btn zero"><span>0</span></button>
+                    <button class="Btn deci"><span></span></button>
+                    <button class="Btn nota"><span>x10</span></button>
+                    <button class="Btn Ans"><span>Ans</span></button>
+                    <button class="Btn equals"><span></span></button>
                 </div>
             </div>
         </main>
