--- a/index.html
+++ b/index.html
@@ -21,17 +21,36 @@
             </div>
             <div id = "bot-content">
                 <div class = "top-text">
-                    <p class = "T-Btn-Text S">SHIFT</p>
-                    <p class = "T-Btn-Text A">ALPHA</p>
-                    <p class = "T-Btn-Text M">MENU</p>
-                    <p class = "T-Btn-Text SE">SETUP</p>
-                    <p class = "T-Btn-Text O">ON</p>
+                    <p class = "T-Btn-Text S lime">SHIFT</p>
+                    <p class = "T-Btn-Text A maroon">ALPHA</p>
+                    <p class = "T-Btn-Text M white">MENU</p>
+                    <p class = "T-Btn-Text SE lime">SETUP</p>
+                    <p class = "T-Btn-Text O white">ON</p>
                 </div>
                 <div class = "top-buttons">
                     <button class = "steel shift"></button>
                     <button class = "steel alpha"></button>
                     <button class = "steel menu"></button>
                     <button class = "steel on"></button>
+                </div>
+                <div class="func-text">
+                    <p class="T-Btn-Text lime">CONST</p>
+                    <p class="T-Btn-Text lime">CONV</p>
+                    <p class="T-Btn-Text lime">RESET</p>
+                    <p class="T-Btn-Text lime">INS</p>
+                    <p class="T-Btn-Text maroon">UNDO</p>
+                    <p class="T-Btn-Text lime">OFF</p>
+                    <p class="T-Btn-Text lime">nPr</p>
+                    <p class="T-Btn-Text lime">nCr</p>
+                    <p class="T-Btn-Text lime">Pol</p>
+                    <p class="T-Btn-Text lime">Rec</p>
+                    <p class="T-Btn-Text lime">Rnd</p>
+                    <p class="T-Btn-Text lime">Ran#</p>
+                    <p class="T-Btn-Text maroon">RanInt</p>
+                    <p class="T-Btn-Text lime">π</p>
+                    <p class="T-Btn-Text maroon">ᥱ</p>
+                    <p class="T-Btn-Text lime">%</p>
+                    <p class="T-Btn-Text lime">≈</p>
                 </div>
                 <div class="bot-buttons">
                     <button class="Btn seven"><span>7</span></button>
@@ -42,7 +61,7 @@
                     <button class="Btn four"><span>4</span></button>
                     <button class="Btn five"><span>5</span></button>
                     <button class="Btn six"><span>6</span></button>
-                    <button class="Btn multi"><span>X</span></button>
+                    <button class="Btn multi"><span>x</span></button>
                     <button class="Btn div"><span></span></button>
                     <button class="Btn one"><span>1</span></button>
                     <button class="Btn two"><span>2</span></button>
@@ -51,7 +70,7 @@
                     <button class="Btn minus"><span></span></button>
                     <button class="Btn zero"><span>0</span></button>
                     <button class="Btn deci"><span></span></button>
-                    <button class="Btn nota"><span>x10</span></button>
+                    <button class="Btn nota"><span>10</span></button>
                     <button class="Btn Ans"><span>Ans</span></button>
                     <button class="Btn equals"><span></span></button>
                 </div>
