--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preload" as="image" href="background.webp">
+    <link rel="preload" as="image" href="metal buttons.webp">
     <title>Advance Calculator</title>
 </head>
 <body>
