faster img loading

--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
             </div>
         </main>
     </div>
+    <style>
+        #calc { background-image: url(background.webp); background-size: contain;
+                background-position: center;}
+        .shift { background-image: url(metal\ buttons.webp); background-size: 29px;
+                 background-position: center; background-repeat: no-repeat;}
+        .alpha { background-image: url(metal\ buttons.webp); background-size: 29px;
+                 background-position: center; background-repeat: no-repeat;}
+        .menu { background-image: url(metal\ buttons.webp); background-size: 29px;
+                background-position: center; background-repeat: no-repeat;}
+        .on { background-image: url(metal\ buttons.webp); background-size: 29px;
+              background-position: center; background-repeat: no-repeat;}
+    </style>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
