mid buttons and size changes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="preload" as="image" href="background.webp">
-    <link rel="preload" as="image" href="metal buttons.webp">
     <title>Advance Calculator</title>
 </head>
 <body>
@@ -19,7 +17,9 @@
                     <p>CLASSWIZ</p>
                 </div>
                 <div class = "top-box panel"></div>
-                <div class = "top-box screen"></div>
+                <div class = "top-box screen">
+                    
+                </div>
             </div>
             <div id = "bot-content">
                 <div class = "top-text">
@@ -34,6 +34,74 @@
                     <button class = "steel alpha"></button>
                     <button class = "steel menu"></button>
                     <button class = "steel on"></button>
+                </div>
+                <div class="mid-buttons">
+                    <button class="s-btn">
+                        <span>OPTN</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>CALC</span>
+                    </button>
+                    <button class="s-btn">
+                        <span></span>
+                    </button>
+                    <button class="s-btn">
+                        <span>X</span>
+                    </button>
+                    <button class="s-btn">
+                        <span></span>
+                    </button>
+                    <button class="s-btn">
+                        <span></span>
+                    </button>
+                    <button class="s-btn">
+                        <span>x</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>x</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>log</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>ln</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>( - )</span>
+                    </button>
+                    <button class="s-btn">
+                        <span> ' "</span>
+                    </button>
+                    <button class="s-btn">
+                        <span></span>
+                    </button>
+                    <button class="s-btn">
+                        <span>sin</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>cos</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>tan</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>STO</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>ENG</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>(</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>)</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>S<=>D</span>
+                    </button>
+                    <button class="s-btn">
+                        <span>M+</span>
+                    </button>
                 </div>
                 <div class="func-text">
                     <p class="T-Btn-Text lime">CONST</p>
@@ -79,18 +147,6 @@
             </div>
         </main>
     </div>
-    <style>
-        #calc { background-image: url(background.webp); background-size: contain;
-                background-position: center;}
-        .shift { background-image: url(metal\ buttons.webp); background-size: 29px;
-                 background-position: center; background-repeat: no-repeat;}
-        .alpha { background-image: url(metal\ buttons.webp); background-size: 29px;
-                 background-position: center; background-repeat: no-repeat;}
-        .menu { background-image: url(metal\ buttons.webp); background-size: 29px;
-                background-position: center; background-repeat: no-repeat;}
-        .on { background-image: url(metal\ buttons.webp); background-size: 29px;
-              background-position: center; background-repeat: no-repeat;}
-    </style>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
