InputBox + Some working buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class = "top-box panel"></div>
                 <div class = "top-box screen">
-                    
+                    <input type="text" id = "arguments"></input>
                 </div>
             </div>
             <div id = "bot-content">
@@ -132,17 +132,17 @@
                     <button class="Btn five"><span>5</span></button>
                     <button class="Btn six"><span>6</span></button>
                     <button class="Btn multi"><span>x</span></button>
-                    <button class="Btn div"><span></span></button>
+                    <button class="Btn div"><span>÷</span></button>
                     <button class="Btn one"><span>1</span></button>
                     <button class="Btn two"><span>2</span></button>
                     <button class="Btn three"><span>3</span></button>
-                    <button class="Btn plus"><span></span></button>
-                    <button class="Btn minus"><span></span></button>
+                    <button class="Btn plus"><span>+</span></button>
+                    <button class="Btn minus"><span>-</span></button>
                     <button class="Btn zero"><span>0</span></button>
-                    <button class="Btn deci"><span></span></button>
+                    <button class="Btn deci"><span>.</span></button>
                     <button class="Btn nota"><span>10</span></button>
                     <button class="Btn Ans"><span>Ans</span></button>
-                    <button class="Btn equals"><span></span></button>
+                    <button class="Btn equals"><span>=</span></button>
                 </div>
             </div>
         </main>
